# I-7580-Protocol

./: CMakeLists.txt  README.md
@Docs/Programs/PFN Tool (v133)/: NIC.ini
Channels/: CMakeLists.txt
Channels/CamsoChannel/: CMakeLists.txt  CamsoChannel.cpp  CamsoChannel.h
Channels/CamsoChannel/CamsoChannelBenchmark/: CMakeLists.txt
Channels/DefaultChannel/: CMakeLists.txt  DefaultChannel.cpp  DefaultChannel.h
Channels/DefaultChannel/DefaultChannelBenchmark/: main.cpp
Examples/: CMakeLists.txt
Examples/CamsoExamples/: CMakeLists.txt
Examples/CamsoExamples/CamsoReceiver/: CMakeLists.txt  main.cpp
Examples/CamsoExamples/CamsoSender/: CMakeLists.txt  main.cpp
Examples/CamsoExamples/CamsoWorker/: CMakeLists.txt
Examples/CamsoExamples/CamsoWorker/CamsoWorker_Lib/: CMakeLists.txt  camsoworker.cpp  camsoworker.h
Examples/CamsoExamples/CamsoWorker/TestCamsoPLC/: CMakeLists.txt  ledindicator.cpp  ledindicator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Examples/CamsoExamples/CamsoWorker/TestCamsoSystem/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Examples/DefaultExamples/: CMakeLists.txt
Examples/DefaultExamples/DefaultReceiver/: CMakeLists.txt  main.cpp
Examples/DefaultExamples/DefaultSender/: CMakeLists.txt  main.cpp
Examples/DefaultExamples/DefaultWorker/: CMakeLists.txt  defaultworker.cpp  defaultworker.h
Parsers/: CMakeLists.txt
Parsers/CamsoParser/: CMakeLists.txt  CamsoParser.cpp  CamsoParser.h
Parsers/DefaultParser/: CMakeLists.txt  DefaultParser.cpp  DefaultParser.h
